force-app/main/default/objects/TeamMember__c/TeamMember__c.object-meta.xml
<CustomObject>
    <description>Stores the Team Member Details for a team.</description>
    <label>Team Member</label>
    <nameField>
        <displayFormat>TeamMember-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>