force-app/main/default/objects/TeamMember__c/Fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Used to store the skills of the particular team member.</description>
    <label>Skills</label>
    <type>TextArea</type>
</CustomField>