force-app/main/default/objects/TeamMember__c/Fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>Stores parent Team.</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Team Member Fields</relationshipLabel>
    <relationshipName>TeamMemberFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>