force-app/main/default/objects/TeamMember__c/Fields/TeamMemberName__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberName__c</fullName>
    <description>Name of the team member.</description>
    <label>Team Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>